src/df_engine_extensions/src/dist_sql_query/snapshots/df_engine_extensions__dist_sql_query__resolver__test__aggr_push_down.snap
---
source: df_engine_extensions/src/dist_sql_query/resolver.rs
assertion_line: 311
expression: new_plan
---
AggregateExec: mode=Final, gby=[tag1@1 as tag1, tag2@2 as tag2], aggr=[COUNT(value), COUNT(field2)]
  CoalescePartitionsExec
    ResolvedPartitionedScan: pushdown_continue:false, partition_count:3
      AggregateExec: mode=Partial, gby=[tag1@1 as tag1, tag2@2 as tag2], aggr=[COUNT(value), COUNT(field2)]
        UnresolvedSubTableScan: table:TableIdentifier { catalog: "test_catalog", schema: "test_schema", table: "__test_1" }, table_scan_ctx:TableScanContext { read_parallelism: 8, batch_size: 10000, projection: Some([1, 2, 3, 4, 5]), predicate: Predicate { exprs:[time < TimestampMillisecond(1691974518000, None) AND tag1 = Utf8("test_tag")], time_range:TimeRange { inclusive_start: Timestamp(-9223372036854775808), exclusive_end: Timestamp(1691974518000) } } }, partition_count:8
      AggregateExec: mode=Partial, gby=[tag1@1 as tag1, tag2@2 as tag2], aggr=[COUNT(value), COUNT(field2)]
        UnresolvedSubTableScan: table:TableIdentifier { catalog: "test_catalog", schema: "test_schema", table: "__test_2" }, table_scan_ctx:TableScanContext { read_parallelism: 8, batch_size: 10000, projection: Some([1, 2, 3, 4, 5]), predicate: Predicate { exprs:[time < TimestampMillisecond(1691974518000, None) AND tag1 = Utf8("test_tag")], time_range:TimeRange { inclusive_start: Timestamp(-9223372036854775808), exclusive_end: Timestamp(1691974518000) } } }, partition_count:8
      AggregateExec: mode=Partial, gby=[tag1@1 as tag1, tag2@2 as tag2], aggr=[COUNT(value), COUNT(field2)]
        UnresolvedSubTableScan: table:TableIdentifier { catalog: "test_catalog", schema: "test_schema", table: "__test_3" }, table_scan_ctx:TableScanContext { read_parallelism: 8, batch_size: 10000, projection: Some([1, 2, 3, 4, 5]), predicate: Predicate { exprs:[time < TimestampMillisecond(1691974518000, None) AND tag1 = Utf8("test_tag")], time_range:TimeRange { inclusive_start: Timestamp(-9223372036854775808), exclusive_end: Timestamp(1691974518000) } } }, partition_count:8

