src/df_engine_extensions/src/dist_sql_query/snapshots/df_engine_extensions__dist_sql_query__resolver__test__node_with_multiple_partitioned_scan_children.snap
---
source: df_engine_extensions/src/dist_sql_query/resolver.rs
assertion_line: 333
expression: new_plan
---
UnionExec
  ResolvedPartitionedScan: pushdown_continue:false, partition_count:3
    ProjectionExec: expr=[time@0 as time, tag1@1 as tag1, tag2@2 as tag2, value@3 as value, field2@4 as field2]
      FilterExec: time@0 < 1691974518000 AND tag1@1 = test_tag
        UnresolvedSubTableScan: table:TableIdentifier { catalog: "test_catalog", schema: "test_schema", table: "__test_1" }, table_scan_ctx:TableScanContext { read_parallelism: 8, batch_size: 10000, projection: Some([1, 2, 3, 4, 5]), predicate: Predicate { exprs:[time < TimestampMillisecond(1691974518000, None) AND tag1 = Utf8("test_tag")], time_range:TimeRange { inclusive_start: Timestamp(-9223372036854775808), exclusive_end: Timestamp(1691974518000) } } }, partition_count:8
    ProjectionExec: expr=[time@0 as time, tag1@1 as tag1, tag2@2 as tag2, value@3 as value, field2@4 as field2]
      FilterExec: time@0 < 1691974518000 AND tag1@1 = test_tag
        UnresolvedSubTableScan: table:TableIdentifier { catalog: "test_catalog", schema: "test_schema", table: "__test_2" }, table_scan_ctx:TableScanContext { read_parallelism: 8, batch_size: 10000, projection: Some([1, 2, 3, 4, 5]), predicate: Predicate { exprs:[time < TimestampMillisecond(1691974518000, None) AND tag1 = Utf8("test_tag")], time_range:TimeRange { inclusive_start: Timestamp(-9223372036854775808), exclusive_end: Timestamp(1691974518000) } } }, partition_count:8
    ProjectionExec: expr=[time@0 as time, tag1@1 as tag1, tag2@2 as tag2, value@3 as value, field2@4 as field2]
      FilterExec: time@0 < 1691974518000 AND tag1@1 = test_tag
        UnresolvedSubTableScan: table:TableIdentifier { catalog: "test_catalog", schema: "test_schema", table: "__test_3" }, table_scan_ctx:TableScanContext { read_parallelism: 8, batch_size: 10000, projection: Some([1, 2, 3, 4, 5]), predicate: Predicate { exprs:[time < TimestampMillisecond(1691974518000, None) AND tag1 = Utf8("test_tag")], time_range:TimeRange { inclusive_start: Timestamp(-9223372036854775808), exclusive_end: Timestamp(1691974518000) } } }, partition_count:8
  ResolvedPartitionedScan: pushdown_continue:false, partition_count:3
    ProjectionExec: expr=[time@0 as time, tag1@1 as tag1, tag2@2 as tag2, value@3 as value, field2@4 as field2]
      FilterExec: time@0 < 1691974518000 AND tag1@1 = test_tag
        UnresolvedSubTableScan: table:TableIdentifier { catalog: "test_catalog", schema: "test_schema", table: "__test_new_1" }, table_scan_ctx:TableScanContext { read_parallelism: 8, batch_size: 10000, projection: Some([1, 2, 3, 4, 5]), predicate: Predicate { exprs:[time < TimestampMillisecond(1691974518000, None) AND tag1 = Utf8("test_tag")], time_range:TimeRange { inclusive_start: Timestamp(-9223372036854775808), exclusive_end: Timestamp(1691974518000) } } }, partition_count:8
    ProjectionExec: expr=[time@0 as time, tag1@1 as tag1, tag2@2 as tag2, value@3 as value, field2@4 as field2]
      FilterExec: time@0 < 1691974518000 AND tag1@1 = test_tag
        UnresolvedSubTableScan: table:TableIdentifier { catalog: "test_catalog", schema: "test_schema", table: "__test_new_2" }, table_scan_ctx:TableScanContext { read_parallelism: 8, batch_size: 10000, projection: Some([1, 2, 3, 4, 5]), predicate: Predicate { exprs:[time < TimestampMillisecond(1691974518000, None) AND tag1 = Utf8("test_tag")], time_range:TimeRange { inclusive_start: Timestamp(-9223372036854775808), exclusive_end: Timestamp(1691974518000) } } }, partition_count:8
    ProjectionExec: expr=[time@0 as time, tag1@1 as tag1, tag2@2 as tag2, value@3 as value, field2@4 as field2]
      FilterExec: time@0 < 1691974518000 AND tag1@1 = test_tag
        UnresolvedSubTableScan: table:TableIdentifier { catalog: "test_catalog", schema: "test_schema", table: "__test_new_3" }, table_scan_ctx:TableScanContext { read_parallelism: 8, batch_size: 10000, projection: Some([1, 2, 3, 4, 5]), predicate: Predicate { exprs:[time < TimestampMillisecond(1691974518000, None) AND tag1 = Utf8("test_tag")], time_range:TimeRange { inclusive_start: Timestamp(-9223372036854775808), exclusive_end: Timestamp(1691974518000) } } }, partition_count:8

